# century-web

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
server/: Cargo.toml
server/migrations/: 20260630171545_create_users.sql
server/src/: app.rs  lib.rs  main.rs
server/src/database/: connection.rs
server/src/errors/: mod.rs
server/src/handlers/: mod.rs  user.rs
server/src/models/: mod.rs  user.rs
server/src/models/entity/: user_entity.rs
server/src/repositories/: user_repository.rs
server/src/routes/: mod.rs  user.rs
server/src/services/: user_service.rs
server/src/state/: mod.rs
