[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono"
] }
